# ColorsSRE_

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: instance.h  math_utils.h  objects.h  window.h
include/pipeline/: fragment_shader.h  merger.h  pipeline.h  pipeline_structs.h  primitive_processing.h  rasterizer.h  vertex_shader.h
src/: data.c  fragment_shader.c  instance.c  main.c  math_utils.c  merger.c  objects.c  pipeline.c  place2.c  primitive_processing.c  rasterizer.c  vertex_shader.c  window.c
